Add .gitignore and update site title and dates in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Card</title>
+  <title>Endurer</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -158,7 +158,7 @@
   <section>
     <div class="card">
       <div class="card-header">
-        <div class="date" id="date">1 January 2025</div>
+        <div class="date" id="date">1 February 2025</div>
         <a href="https://github.com/Tyrhaton/Endurer">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
             <path fill-rule="evenodd" d="M10.5 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm0 6a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm0 6a1.5 1.5 0" clip-rule="evenodd" />
@@ -171,7 +171,7 @@
         <div class="progress">
           <span>Progress</span>
           <div class="progress-bar"></div>
-          <span>10%</span>
+          <span>15%</span>
         </div>
       </div>
       <div class="card-footer">
@@ -197,7 +197,7 @@
       span.textContent = daysLeft > 0 ? `${daysLeft} days left` : "0 days left";
     }
 
-    const targetDate = "2025-01-01";
+    const targetDate = "2025-02-01";
     updateDaysLeft(targetDate);
 
     const date = new Date(2025, 0, 1);
